style: fix all SpotBugs P1 and P2 exceptions
Signed-off-by: Andreas Reichel <andreas@manticore-projects.com>